--- a/css/styles.css
+++ b/css/styles.css
@@ -23,13 +23,15 @@
   --dark-page-parts-color: #2f303a;
   --logo-light-color: #ffffff;
   --logo-dark-color: #000000;
+  --button-color: #f5f4fa;
+  --projects-border-color: #eeeeee;
 }
 
 body {
   font-family: "Roboto", sans-serif;
   font-style: normal;
   /* backgroup-color is grey to make everything visible for now*/
-  background-color: #a19f9f;
+  /*background-color: #a19f9f;*/
 }
 
 .link {
@@ -138,6 +140,10 @@ img {
   color: var(--accent-color);
 }
 
+.header-subfeature {
+  border: 1px solid #ececec;
+}
+
 /*----------------- End Header styles ------------------*/
 /*------------------- Footer styles --------------------*/
 
@@ -221,6 +227,7 @@ img {
   text-align: center;
   letter-spacing: 0.06em;
   color: var(--button-text-color);
+  background-color: var(--button-color);
 
   height: 50px;
   min-width: 200px;
@@ -371,6 +378,13 @@ img {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--button-text-color);
+  border-radius: 4px;
+  border-width: 0;
+  background-color: var(--button-color);
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-right: 22px;
+  padding-left: 22px;
 }
 
 .project-button:hover,
@@ -381,6 +395,46 @@ img {
 
 /*------------ End Project Buttons Styles -------------*/
 /*------------------ Projects Styles ------------------*/
+
+.projects-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.project-buttons-list {
+  display: flex;
+  justify-content: center;
+}
+
+.project-button-element:not(:last-child) {
+  margin-right: 8px;
+}
+
+/*.project-button-element {
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-right: 22px;
+  padding-left: 22px;
+}*/
+
+.projects-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 50px;
+}
+
+.projects-list-element:not(:nth-of-type(3n)) {
+  margin-right: 30px;
+}
+
+.projects-list-element:not(:nth-last-of-type(-n + 3)) {
+  margin-bottom: 30px;
+}
+
+.projects-list-element {
+  border: 1px solid var(--projects-border-color);
+  width: 370px;
+}
 
 .projects-list-header {
   font-weight: 700;
@@ -396,6 +450,22 @@ img {
   line-height: 1.875;
   letter-spacing: 0.03em;
   color: var(--descriptions-text);
+}
+
+.projects-section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.project-card-text {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-right: 24px;
+  padding-left: 24px;
+}
+
+.projects-list-description {
+  margin-top: 4px;
 }
 
 /*---------------- End Projects Styles ----------------*/
